--- a/environment.yml
+++ b/environment.yml
@@ -3,142 +3,157 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
-  - asttokens=3.0.0=pyhd8ed1ab_1
-  - blosc=1.21.6=he440d0b_1
-  - brotli=1.1.0=hb9d3cd8_3
-  - brotli-bin=1.1.0=hb9d3cd8_3
-  - bzip2=1.0.8=h4bc722e_7
-  - c-ares=1.34.5=hb9d3cd8_0
-  - ca-certificates=2025.8.3=hbd8a1cb_0
-  - cached-property=1.5.2=hd8ed1ab_1
-  - cached_property=1.5.2=pyha770c72_1
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - contourpy=1.3.3=py312hd9148b4_1
-  - cycler=0.12.1=pyhd8ed1ab_1
-  - dagmc=3.2.4=nompi_nodoubledown_py312h24dc833_101
-  - decorator=5.2.1=pyhd8ed1ab_0
-  - eigen=3.4.0=h00ab1b0_0
-  - endf=0.1.4=py312h2ec8cdc_2
-  - exceptiongroup=1.3.0=pyhd8ed1ab_0
-  - executing=2.2.0=pyhd8ed1ab_0
-  - fonttools=4.59.0=py312h8a5da7c_0
-  - freetype=2.13.3=ha770c72_1
-  - future=1.0.0=pyhd8ed1ab_2
-  - h5py=3.13.0=nompi_py312hedeef09_100
-  - hdf4=4.2.15=h2a13503_7
-  - hdf5=1.14.3=nompi_h2d575fe_109
-  - iniconfig=2.0.0=pyhd8ed1ab_1
-  - ipython=9.4.0=pyhfa0c392_0
-  - ipython_pygments_lexers=1.1.1=pyhd8ed1ab_0
-  - jedi=0.19.2=pyhd8ed1ab_1
-  - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.8=py312h68727a3_1
-  - krb5=1.21.3=h659f571_0
-  - lcms2=2.17=h717163a_0
-  - ld_impl_linux-64=2.44=h1423503_1
-  - lerc=4.0.0=h0aef613_1
-  - libaec=1.1.4=h3f801dc_0
-  - libblas=3.9.0=32_h59b9bed_openblas
-  - libbrotlicommon=1.1.0=hb9d3cd8_3
-  - libbrotlidec=1.1.0=hb9d3cd8_3
-  - libbrotlienc=1.1.0=hb9d3cd8_3
-  - libcblas=3.9.0=32_he106b2a_openblas
-  - libcurl=8.14.1=h332b0f4_0
-  - libdeflate=1.24=h86f0d12_0
-  - libedit=3.1.20250104=pl5321h7949ede_0
-  - libev=4.33=hd590300_2
-  - libexpat=2.7.1=hecca717_0
-  - libffi=3.4.6=h2dba641_1
-  - libfreetype=2.13.3=ha770c72_1
-  - libfreetype6=2.13.3=h48d6fc4_1
-  - libgcc=15.1.0=h767d61c_4
-  - libgcc-ng=15.1.0=h69a702a_4
-  - libgfortran=15.1.0=h69a702a_4
-  - libgfortran5=15.1.0=hcea5267_4
-  - libgomp=15.1.0=h767d61c_4
-  - libiconv=1.18=h4ce23a2_1
-  - libjpeg-turbo=3.1.0=hb9d3cd8_0
-  - liblapack=3.9.0=32_h7ac8fdf_openblas
-  - liblzma=5.8.1=hb9d3cd8_2
-  - libnetcdf=4.9.2=nompi_h00e09a9_116
-  - libnghttp2=1.64.0=h161d5f1_0
-  - libnsl=2.0.1=hb9d3cd8_1
-  - libopenblas=0.3.30=pthreads_h94d23a6_1
-  - libpng=1.6.50=h421ea60_1
-  - libsqlite=3.50.4=h0c1763c_0
-  - libssh2=1.11.1=hcf80075_0
-  - libstdcxx=15.1.0=h8f9b012_4
-  - libstdcxx-ng=15.1.0=h4852527_4
-  - libtiff=4.7.0=hf01ce69_5
-  - libuuid=2.38.1=h0b41bf4_0
-  - libwebp-base=1.6.0=hd42ef1d_0
-  - libxcb=1.17.0=h8a09558_0
-  - libxcrypt=4.4.36=hd590300_1
-  - libxml2=2.13.8=h2cb61b6_1
-  - libxslt=1.1.43=h7a3aeb2_0
-  - libzip=1.11.2=h6991a6a_0
-  - libzlib=1.3.1=hb9d3cd8_2
-  - lxml=6.0.0=py312h68d7fa5_0
-  - lz4-c=1.10.0=h5888daf_1
-  - matplotlib-base=3.10.5=py312he3d6523_0
-  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
-  - metis=5.1.0=hd0bcaf9_1007
-  - moab=5.5.1=nompi_tempest_py312hab164d0_5
-  - munkres=1.1.4=pyhd8ed1ab_1
-  - ncrystal=4.2.6=pyhf5fbd30_0
-  - ncrystal-core=4.2.6=pyh8af1aa0_0
-  - ncrystal-lib=4.2.6=h7033f15_0
-  - ncrystal-python=4.2.6=pyh8af1aa0_0
-  - ncurses=6.5=h2d0b736_3
-  - njoy2016=2016.78=py312hecb35f1_0
-  - numpy=2.3.2=py312h33ff503_0
-  - openjpeg=2.5.3=h55fea9a_1
-  - openmc=0.15.2=dagmc_nompi_py312h5423474_100
-  - openssl=3.5.2=h26f9b46_0
-  - packaging=25.0=pyh29332c3_1
-  - pandas=2.3.1=py312hf79963d_0
-  - parso=0.8.4=pyhd8ed1ab_1
-  - patsy=1.0.1=pyhd8ed1ab_1
-  - pexpect=4.9.0=pyhd8ed1ab_1
-  - pickleshare=0.7.5=pyhd8ed1ab_1004
-  - pillow=11.3.0=py312h80c1187_0
-  - pip=25.2=pyh8b19718_0
-  - pluggy=1.6.0=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.51=pyha770c72_0
-  - pthread-stubs=0.4=hb9d3cd8_1002
-  - ptyprocess=0.7.0=pyhd8ed1ab_1
-  - pure_eval=0.2.3=pyhd8ed1ab_1
-  - pygments=2.19.2=pyhd8ed1ab_0
-  - pyparsing=3.2.3=pyhe01879c_2
-  - pytest=8.4.1=pyhd8ed1ab_0
-  - python=3.12.11=h9e4cc4f_0_cpython
-  - python-dateutil=2.9.0.post0=pyhe01879c_2
-  - python-tzdata=2025.2=pyhd8ed1ab_0
-  - python_abi=3.12=6_cp312
-  - pytz=2025.2=pyhd8ed1ab_0
-  - qhull=2020.2=h434a139_5
-  - readline=8.2=h8c095d6_2
-  - scipy=1.16.0=py312hf734454_0
-  - seaborn=0.13.2=hd8ed1ab_3
-  - seaborn-base=0.13.2=pyhd8ed1ab_3
-  - setuptools=80.9.0=pyhff2d567_0
-  - six=1.17.0=pyhe01879c_1
-  - snappy=1.2.2=h03e3b7b_0
-  - stack_data=0.6.3=pyhd8ed1ab_1
-  - statsmodels=0.14.5=py312h8b63200_0
-  - tempest-remap=2.2.0=heeae502_5
-  - tk=8.6.13=noxft_hd72426e_102
-  - tomli=2.2.1=pyhe01879c_2
-  - traitlets=5.14.3=pyhd8ed1ab_1
-  - typing_extensions=4.14.1=pyhe01879c_0
-  - tzdata=2025b=h78e105d_0
-  - uncertainties=3.2.3=pyhd8ed1ab_0
-  - unicodedata2=16.0.0=py312h66e93f0_0
-  - wcwidth=0.2.13=pyhd8ed1ab_1
-  - wheel=0.45.1=pyhd8ed1ab_1
-  - xorg-libxau=1.0.12=hb9d3cd8_0
-  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
-  - zlib=1.3.1=hb9d3cd8_2
-  - zstd=1.5.7=hb8e6e7a_2
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - asttokens=3.0.0
+  - blosc=1.21.6
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - bzip2=1.0.8
+  - c-ares=1.34.5
+  - ca-certificates=2025.10.5
+  - cached-property=1.5.2
+  - cached_property=1.5.2
+  - colorama=0.4.6
+  - contourpy=1.3.3
+  - cycler=0.12.1
+  - dagmc=3.2.4
+  - decorator=5.2.1
+  - eigen=3.4.0
+  - endf=0.1.4
+  - exceptiongroup=1.3.0
+  - executing=2.2.0
+  - fonttools=4.59.0
+  - freetype=2.13.3
+  - future=1.0.0
+  - h5py=3.13.0
+  - hdf4=4.2.15
+  - hdf5=1.14.3
+  - iniconfig=2.0.0
+  - ipython=9.4.0
+  - ipython_pygments_lexers=1.1.1
+  - jedi=0.19.2
+  - jinja2=3.1.6
+  - keyutils=1.6.1
+  - kiwisolver=1.4.8
+  - krb5=1.21.3
+  - lcms2=2.17
+  - ld_impl_linux-64=2.44
+  - lerc=4.0.0
+  - libaec=1.1.4
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcblas=3.9.0
+  - libcurl=8.14.1
+  - libdeflate=1.24
+  - libedit=3.1.20250104
+  - libev=4.33
+  - libexpat=2.7.1
+  - libffi=3.4.6
+  - libfreetype=2.13.3
+  - libfreetype6=2.13.3
+  - libgcc=15.1.0
+  - libgcc-ng=15.1.0
+  - libgfortran=15.1.0
+  - libgfortran5=15.1.0
+  - libgomp=15.1.0
+  - libiconv=1.18
+  - libjpeg-turbo=3.1.0
+  - liblapack=3.9.0
+  - liblzma=5.8.1
+  - libnetcdf=4.9.2
+  - libnghttp2=1.64.0
+  - libnsl=2.0.1
+  - libopenblas=0.3.30
+  - libpng=1.6.50
+  - libsqlite=3.50.4
+  - libssh2=1.11.1
+  - libstdcxx=15.1.0
+  - libstdcxx-ng=15.1.0
+  - libtiff=4.7.0
+  - libuuid=2.38.1
+  - libwebp-base=1.6.0
+  - libxcb=1.17.0
+  - libxcrypt=4.4.36
+  - libxml2=2.13.8
+  - libxslt=1.1.43
+  - libzip=1.11.2
+  - libzlib=1.3.1
+  - lxml=6.0.0
+  - lz4-c=1.10.0
+  - markupsafe=3.0.2
+  - matplotlib-base=3.10.5
+  - matplotlib-inline=0.1.7
+  - metis=5.1.0
+  - moab=5.5.1
+  - munkres=1.1.4
+  - ncrystal=4.2.6
+  - ncrystal-core=4.2.6
+  - ncrystal-lib=4.2.6
+  - ncrystal-python=4.2.6
+  - ncurses=6.5
+  - njoy2016=2016.78
+  - numpy=2.3.2
+  - openjpeg=2.5.3
+  - openmc=0.15.2
+  - openssl=3.5.4
+  - packaging=25.0
+  - pandas=2.3.1
+  - parso=0.8.4
+  - patsy=1.0.1
+  - pexpect=4.9.0
+  - pickleshare=0.7.5
+  - pillow=11.3.0
+  - pip=25.2
+  - pluggy=1.6.0
+  - prompt-toolkit=3.0.51
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.3
+  - pygments=2.19.2
+  - pyparsing=3.2.3
+  - pytest=8.4.1
+  - python=3.12.11
+  - python-dateutil=2.9.0.post0
+  - python-tzdata=2025.2
+  - python_abi=3.12
+  - pytz=2025.2
+  - qhull=2020.2
+  - readline=8.2
+  - scipy=1.16.0
+  - seaborn=0.13.2
+  - seaborn-base=0.13.2
+  - setuptools=80.9.0
+  - six=1.17.0
+  - snappy=1.2.2
+  - stack_data=0.6.3
+  - statsmodels=0.14.5
+  - tempest-remap=2.2.0
+  - tk=8.6.13
+  - tomli=2.2.1
+  - tqdm=4.67.1
+  - traitlets=5.14.3
+  - typing_extensions=4.14.1
+  - tzdata=2025b
+  - uncertainties=3.2.3
+  - unicodedata2=16.0.0
+  - wcwidth=0.2.13
+  - wheel=0.45.1
+  - xorg-libxau=1.0.12
+  - xorg-libxdmcp=1.1.5
+  - zlib=1.3.1
+  - zstd=1.5.7
+  - pip:
+    - armi==0.6.0
+    - coverage==7.10.5
+    - mosden==0.1
+    - ordered-set==4.1.0
+    - pydoe==0.3.8
+    - pyevtk==1.6.0
+    - ruamel-yaml==0.18.15
+    - ruamel-yaml-clib==0.2.12
+    - toml==0.10.2
+    - voluptuous==0.15.2
+    - yamlize==0.7.1
