--- a/.gitignore
+++ b/.gitignore
@@ -182,6 +182,10 @@ cython_debug/
 /examples/msre/postproc.json
 /examples/msre/images/*
 
+/examples/pure_endfb71/*.csv
+/examples/pure_endfb71/postproc.json
+/examples/pure_endfb71/images/*
+
 /examples/prelim_results/*
 !/examples/prelim_results/input.json
 !/examples/prelim_results/results_generator.py
