--- a/environment.yml
+++ b/environment.yml
@@ -1,158 +1,17 @@
 name: mosdenv
 channels:
   - conda-forge
-  - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - asttokens=3.0.0
-  - blosc=1.21.6
-  - brotli=1.1.0
-  - brotli-bin=1.1.0
-  - bzip2=1.0.8
-  - c-ares=1.34.5
-  - ca-certificates=2025.10.5
-  - cached-property=1.5.2
-  - cached_property=1.5.2
-  - colorama=0.4.6
-  - contourpy=1.3.3
-  - cycler=0.12.1
-  - dagmc=3.2.4
-  - decorator=5.2.1
-  - eigen=3.4.0
-  - endf=0.1.4
-  - exceptiongroup=1.3.0
-  - executing=2.2.0
-  - fonttools=4.59.0
-  - freetype=2.13.3
-  - future=1.0.0
-  - h5py=3.13.0
-  - hdf4=4.2.15
-  - hdf5=1.14.3
-  - iniconfig=2.0.0
-  - ipython=9.4.0
-  - ipython_pygments_lexers=1.1.1
-  - jedi=0.19.2
-  - jinja2=3.1.6
-  - keyutils=1.6.1
-  - kiwisolver=1.4.8
-  - krb5=1.21.3
-  - lcms2=2.17
-  - ld_impl_linux-64=2.44
-  - lerc=4.0.0
-  - libaec=1.1.4
-  - libblas=3.9.0
-  - libbrotlicommon=1.1.0
-  - libbrotlidec=1.1.0
-  - libbrotlienc=1.1.0
-  - libcblas=3.9.0
-  - libcurl=8.14.1
-  - libdeflate=1.24
-  - libedit=3.1.20250104
-  - libev=4.33
-  - libexpat=2.7.1
-  - libffi=3.4.6
-  - libfreetype=2.13.3
-  - libfreetype6=2.13.3
-  - libgcc=15.1.0
-  - libgcc-ng=15.1.0
-  - libgfortran=15.1.0
-  - libgfortran5=15.1.0
-  - libgomp=15.1.0
-  - libiconv=1.18
-  - libjpeg-turbo=3.1.0
-  - liblapack=3.9.0
-  - liblzma=5.8.1
-  - libnetcdf=4.9.2
-  - libnghttp2=1.64.0
-  - libnsl=2.0.1
-  - libopenblas=0.3.30
-  - libpng=1.6.50
-  - libsqlite=3.50.4
-  - libssh2=1.11.1
-  - libstdcxx=15.1.0
-  - libstdcxx-ng=15.1.0
-  - libtiff=4.7.0
-  - libuuid=2.38.1
-  - libwebp-base=1.6.0
-  - libxcb=1.17.0
-  - libxcrypt=4.4.36
-  - libxml2=2.13.8
-  - libxslt=1.1.43
-  - libzip=1.11.2
-  - libzlib=1.3.1
-  - lxml=6.0.0
-  - lz4-c=1.10.0
-  - markupsafe=3.0.2
-  - matplotlib-base=3.10.5
-  - matplotlib-inline=0.1.7
-  - metis=5.1.0
-  - moab=5.5.1
-  - munkres=1.1.4
-  - ncrystal=4.2.6
-  - ncrystal-core=4.2.6
-  - ncrystal-lib=4.2.6
-  - ncrystal-python=4.2.6
-  - ncurses=6.5
-  - njoy2016=2016.78
-  - numpy=2.3.2
-  - openjpeg=2.5.3
-  - openmc=0.15.2
-  - openssl=3.5.4
-  - packaging=25.0
-  - pandas=2.3.1
-  - parso=0.8.4
-  - patsy=1.0.1
-  - pexpect=4.9.0
-  - pickleshare=0.7.5
-  - pillow=11.3.0
-  - pip=25.2
-  - pluggy=1.6.0
-  - prompt-toolkit=3.0.51
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.3
-  - pygments=2.19.2
-  - pyparsing=3.2.3
-  - pytest=8.4.1
-  - python=3.12.11
-  - python-dateutil=2.9.0.post0
-  - python-tzdata=2025.2
-  - python_abi=3.12
-  - pytz=2025.2
-  - qhull=2020.2
-  - readline=8.2
-  - scipy=1.16.0
-  - seaborn=0.13.2
-  - seaborn-base=0.13.2
-  - setuptools=80.9.0
-  - six=1.17.0
-  - snappy=1.2.2
-  - stack_data=0.6.3
-  - statsmodels=0.14.5
-  - tempest-remap=2.2.0
-  - tk=8.6.13
-  - tomli=2.2.1
-  - tqdm=4.67.1
-  - traitlets=5.14.3
-  - typing_extensions=4.14.1
-  - tzdata=2025b
-  - uncertainties=3.2.3
-  - unicodedata2=16.0.0
-  - wcwidth=0.2.13
-  - wheel=0.45.1
-  - xorg-libxau=1.0.12
-  - xorg-libxdmcp=1.1.5
-  - zlib=1.3.1
-  - zstd=1.5.7
+  - python=3.12
+  - numpy
+  - pip
+  - pytest
+  - pandas
+  - uncertainties
+  - scipy
+  - tqdm
+  - openmc
+  - seaborn
   - pip:
-    - https://github.com/terrapower/armi/archive/main.zip
-    - coverage==7.10.5
-    - ordered-set==4.1.0
-    - pydoe==0.3.8
-    - pyevtk==1.6.0
-    - ruamel-yaml==0.18.15
-    - ruamel-yaml-clib==0.2.12
-    - toml==0.10.2
-    - voluptuous==0.15.2
-    - yamlize==0.7.1
+      - -e .
+      - https://github.com/terrapower/armi/archive/main.zip
