Add JSON schema

--- a/environment.yml
+++ b/environment.yml
@@ -13,6 +13,7 @@ dependencies:
   - openmc
   - seaborn
   - jinja2
+  - jsonschema
   - pip:
       - -e .
       - https://github.com/terrapower/armi/archive/main.zip
