--- a/.github/workflows/runtests.yml
+++ b/.github/workflows/runtests.yml
@@ -37,4 +37,4 @@ jobs:
       - name: Run pytest
         shell: bash -l {0}
         run: |
-          pytest -vv
+          pytest -vv -m "not openmc"
