--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,5 @@
 markers = [
     "slow: marks tests as slow (deselect with '-m \"not slow\"')",
     "serial",
+    "openmc: requires OpenMC cross section data"
 ]
